[project]
name = "robotframework-userguide"
version = "7.0.0"
description = "Robot Framework User Guide built with MkDocs"
readme = "docs/index.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Robot Framework Foundation"}
]
keywords = ["robotframework", "documentation", "userguide"]

dependencies = [
    "mkdocs-material>=9.5.0",
    "mike>=2.0.0",
    "mkdocs-redirects>=1.2.0",
    "mkdocs-section-index>=0.3.0",
    "pymdown-extensions>=10.0",
    "pygments>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docs"]

[dependency-groups]
dev = [
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]
