[project]
name = "docdiff"
version = "1.0.0"
description = "Documentation comparison tool for auditing RST to Markdown migrations"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Robot Framework Foundation"}
]
keywords = ["documentation", "comparison", "diff", "markdown", "rst"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No external dependencies - stdlib only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
docdiff = "docdiff.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["docdiff"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["docdiff"]

[tool.hatch.build.targets.sdist]
include = ["docdiff"]
